# active-portfolio-management-notebook

./: README.md  intro.md  myst.yml  pyproject.toml
doc/foundations/: capm.ipynb  capm.md  factor_risk.ipynb  finecon101.ipynb  mean_var.ipynb  overview.md  risk.ipynb
exercises/: ch2.ipynb
src/apm/core/: utils.py
src/apm/data/: prices.py
src/apm/models/: factor_model.py
user_guide/: apm_1_rgm.ipynb  gas.ipynb
